--- a/index.html
+++ b/index.html
@@ -9,15 +9,7 @@
     <h1>Hi, do you find something?</h1>
     <ul>
         <li>
-            PR1 - A1 - Plagiarism check
-            <ul>
-                <li>
-                    <a href="/pr1/a1/plagiarism/files">Detected files (45)</a>
-                </li>
-                <li>
-                    <a href="/pr1/a1/plagiarism/details">Details</a>
-                </li>
-            </ul>
+            <a href="/pr1/a1/plagiarism/details/results/0/8137471797849/index.html"> PR1 - A1 - Plagiarism check </a>
             
         </li>
     </ul>
